--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -1,10 +1,10 @@
 {% extends "admin/base.html" %}
 {% load i18n %}
 
-{% block title %}{{ title }} | SITE NAME<!-- TODO -->{% endblock %}
+{% block title %}{{ title }} | img.pb.io{% endblock %}
 
 {% block branding %}
-<h1 id="site-name">SITE NAME<!-- TODO --></h1>
+<h1 id="site-name">img.pb.io</h1>
 {% endblock %}
 
 {% block nav-global %}{% endblock %}
