--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>{% block site_name %}SITE NAME<!-- TODO -->{% endblock %}</title>
+    <title>{% block site_name %}img.pb.io{% endblock %}</title>
     {% block fonts %}{% endblock %}
     {% compress css %}
     <link rel="stylesheet" media="screen, projection" type="text/css" href="{{ MEDIA_URL }}css/screen.css">
@@ -16,6 +16,8 @@
     {% block extra_styles %}{% endblock %}
     {% compress js %}
     <script type="text/javascript" src="{{ MEDIA_URL }}js/lib/jquery.js"></script>
+    <script type="text/javascript" src="{{ MEDIA_URL }}js/lib/jquery.meta.js"></script>
+    <script type="text/javascript" src="{{ MEDIA_URL }}js/master.js"></script>
     {% block scripts %}{% endblock %}
     {% block extra_scripts %}{% endblock %}
     {% endcompress %}
@@ -26,7 +28,7 @@
 <body>
     {% block body %}
     <div id="wrapper">
-        <div id="header">{% block header %}<h1>SITE NAME<!-- TODO --></h1>{% endblock %}</div>
+        <div id="header">{% block header %}<h1>img.pb.io</h1>{% endblock %}</div>
         {% block main %}
         <div id="content">{% block content %}{% endblock %}</div>
         {% endblock %}
