--- a/media/css/screen.css
+++ b/media/css/screen.css
@@ -1,7 +1,3 @@
-/* Welcome to Compass.
- * In this file you should write your main styles. (or centralize your imports)
- * Import this file using the following HTML or equivalent:
- * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
 /* line 14, ../../../../../../opt/local/lib/ruby/gems/1.8/gems/compass-0.10.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
@@ -62,34 +58,111 @@ a img {
   border: none;
 }
 
-/* line 14, ../src/screen.scss */
-body {
-  background: white url("../img/checkered.png") repeat;
+/* line 13, ../src/screen.scss */
+body, html {
+  height: 100%;
 }
 
-/* line 18, ../src/screen.scss */
-#wrapper {
-  text-align: center;
-  margin: 48px;
-  font-family: "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
+/* line 17, ../src/screen.scss */
+body {
+  background: white url("../img/checkered.png") repeat;
+  padding-bottom: 1px;
+  color: #94958d;
+  font-size: 15px;
 }
 
 /* line 24, ../src/screen.scss */
+a {
+  color: #bd5678;
+  text-decoration: none;
+}
+
+/* line 29, ../src/screen.scss */
+#wrapper {
+  text-align: center;
+  padding: 48px;
+  font-family: "HelveticaNeue-Light", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+/* line 35, ../src/screen.scss */
 h1 {
   font-size: 32pt;
-  font-family: "HelveticaNeue-Light", Helvetica, Arial, sans-serif;
   color: #72A8B0;
   text-shadow: rgba(255, 255, 255, 0.5) 0px 1px 0px;
 }
 
-/* line 31, ../src/screen.scss */
+/* line 41, ../src/screen.scss */
+h2 {
+  font-size: 24px;
+  text-shadow: rgba(255, 255, 255, 0.5) 0px 1px 0px;
+  margin-bottom: 12px;
+}
+
+/* line 47, ../src/screen.scss */
 #content {
   margin: 32px 0;
 }
 
-/* line 35, ../src/screen.scss */
-#image {
+/* line 52, ../src/screen.scss */
+.image img {
   position: relative;
   display: block;
   margin: 0 auto;
+  -moz-transition-property: width,height;
+  -webkit-transition-property: width,height;
+  -o-transition-property: width,height;
+  transition-property: width,height;
+  -moz-transition-duration: 1s;
+  -webkit-transition-duration: 1s;
+  -o-transition-duration: 1s;
+  transition-duration: 1s;
+}
+/* line 59, ../src/screen.scss */
+.image .scalable-note {
+  -moz-transition-property: opacity;
+  -webkit-transition-property: opacity;
+  -o-transition-property: opacity;
+  transition-property: opacity;
+  -moz-transition-duration: 1s;
+  -webkit-transition-duration: 1s;
+  -o-transition-duration: 1s;
+  transition-duration: 1s;
+  -moz-transition-timing-function: ease;
+  -webkit-transition-timing-function: ease;
+  -o-transition-timing-function: ease;
+  transition-timing-function: ease;
+  -moz-transition-delay: 0.8s;
+  -webkit-transition-delay: 0.8s;
+  -o-transition-delay: 0.8s;
+  transition-delay: 0.8s;
+  opacity: 1;
+}
+/* line 64, ../src/screen.scss */
+.image.large .scalable-note {
+  -moz-transition-delay: 0;
+  -webkit-transition-delay: 0;
+  -o-transition-delay: 0;
+  transition-delay: 0;
+  opacity: 0;
+}
+
+/* line 70, ../src/screen.scss */
+.scalable-note {
+  font-size: 12px;
+  color: #643F2D;
+  margin: 16px 0;
+}
+
+/* line 76, ../src/screen.scss */
+.links {
+  margin: 32px 0;
+}
+/* line 79, ../src/screen.scss */
+.links a:before {
+  content: ' | ';
+  color: #94958d;
+}
+/* line 84, ../src/screen.scss */
+.links a:first-child:before {
+  content: '';
 }
