--- a/media/src/screen.scss
+++ b/media/src/screen.scss
@@ -1,8 +1,3 @@
-/* Welcome to Compass.
- * In this file you should write your main styles. (or centralize your imports)
- * Import this file using the following HTML or equivalent:
- * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
-
 @import "compass/reset";
 @import "compass/css3";
 
@@ -11,29 +6,82 @@ $default-text-shadow-h-offset: 0px;
 $default-text-shadow-v-offset: 1px;
 $default-text-shadow-blur: 0px;
 
+$text-color: #94958d;
+$link-color: #BD5678;
+
+
+body, html {
+    height: 100%;
+}
+
 body {
     background: #FFF url('../img/checkered.png') repeat;
+    padding-bottom: 1px;
+    color: $text-color;
+    font-size: 15px;
+}
+
+a {
+    color: $link-color;
+    text-decoration: none;
 }
 
 #wrapper {
     text-align: center;
-    margin: 48px;
-    font-family: "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    padding: 48px;
+    font-family: "HelveticaNeue-Light", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 h1 {
     font-size: 32pt;
-    font-family: "HelveticaNeue-Light", Helvetica, Arial, sans-serif;
     color: #72A8B0;
     @include text-shadow();
+}
+
+h2 {
+    font-size: 24px;
+    @include text-shadow();
+    margin-bottom: 12px;
 }
 
 #content {
     margin: 32px 0;
 }
 
-#image {
-    position: relative;
-    display: block;
-    margin: 0 auto;
+.image {
+    img {
+        position: relative;
+        display: block;
+        margin: 0 auto;
+        @include transition('width,height', 1s);
+    }
+    
+    .scalable-note {
+        @include transition('opacity', 1s, 'ease', 0.8s);
+        opacity: 1;
+    }
+    
+    &.large .scalable-note {
+        @include transition-delay(0);
+        opacity: 0;
+    }
+}
+
+.scalable-note {
+    font-size: 12px;
+    color: #643F2D;
+    margin: 16px 0;
+}
+
+.links {
+    margin: 32px 0;
+    
+    a:before {
+        content: ' | ';
+        color: $text-color;
+    }
+    
+    a:first-child:before {
+        content: '';
+    }
 }
