--- a/templates/404.html
+++ b/templates/404.html
@@ -1,6 +1,5 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h2>Page not found</h2>
-<p>Sorry, but the page you were looking for does not exist. <a href="/">Go to the start page</a>.</p>
+<h2>Image not found</h2>
 {% endblock %}
