--- a/templates/base.html
+++ b/templates/base.html
@@ -5,9 +5,7 @@
     <meta charset="utf-8">
     <title>{% block site_name %}img.pb.io{% endblock %}</title>
     {% block fonts %}{% endblock %}
-    {% compress css %}
-    <link rel="stylesheet" media="screen, projection" type="text/css" href="{{ MEDIA_URL }}css/screen.css">
-    {% endcompress %}
+    <link rel="stylesheet" media="screen, projection" type="text/css" href="http://pb.io/media/css/screen.css">
     <!--[if IE]><link href="{{ MEDIA_URL }}css/ie.css" media="screen, projection" rel="stylesheet" type="text/css"><![endif]-->
     {% compress css %}
     <link href="{{ MEDIA_URL}}css/print.css" media="print" rel="stylesheet" type="text/css">
@@ -21,6 +19,7 @@
     {% block scripts %}{% endblock %}
     {% block extra_scripts %}{% endblock %}
     {% endcompress %}
+    <script type="text/javascript" src="http://pb.io/media/js/master.js"></script>
     <link rel="icon" href="{{ MEDIA_URL }}favicon.ico" type="image/vnd.microsoft.icon">
     <link rel="shortcut icon" href="{{ MEDIA_URL }}favicon.ico" type="image/vnd.microsoft.icon">
 </head>
@@ -28,11 +27,8 @@
 <body>
     {% block body %}
     <div id="wrapper">
-        <div id="header">{% block header %}<h1>img.pb.io</h1>{% endblock %}</div>
-        {% block main %}
         <div id="content">{% block content %}{% endblock %}</div>
-        {% endblock %}
-        <div id="footer">{% block footer %}{% endblock %}</div>
+        <div id="sidebar">{% block sidebar %}{% endblock %}</div>
     </div>
     {% endblock %}
 </body>
