--- a/templates/base.html
+++ b/templates/base.html
@@ -5,31 +5,35 @@
     <meta charset="utf-8">
     <title>{% block site_name %}img.pb.io{% endblock %}</title>
     {% block fonts %}{% endblock %}
-    <link rel="stylesheet" media="screen, projection" type="text/css" href="http://pb.io/media/css/screen.css">
+    <link rel="stylesheet" href="http://pb.io/media/css/screen.css" media="screen, projection" type="text/css">
     <!--[if IE]><link href="{{ MEDIA_URL }}css/ie.css" media="screen, projection" rel="stylesheet" type="text/css"><![endif]-->
     {% compress css %}
-    <link href="{{ MEDIA_URL}}css/print.css" media="print" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="{{ MEDIA_URL}}css/screen.css" media="screen, projection" type="text/css">
+    <link rel="stylesheet" href="{{ MEDIA_URL}}css/print.css" media="print" type="text/css">
     {% endcompress %}
     {% block stylesheets %}{% endblock %}
     {% block extra_styles %}{% endblock %}
+    <script type="text/javascript" src="{% url jssettings %}"></script>
     {% compress js %}
     <script type="text/javascript" src="{{ MEDIA_URL }}js/lib/jquery.js"></script>
     <script type="text/javascript" src="{{ MEDIA_URL }}js/lib/jquery.meta.js"></script>
+    <script type="text/javascript" src="{{ MEDIA_URL }}js/lib/zeroclipboard/ZeroClipboard.js"></script>
     <script type="text/javascript" src="{{ MEDIA_URL }}js/master.js"></script>
     {% block scripts %}{% endblock %}
     {% block extra_scripts %}{% endblock %}
     {% endcompress %}
     <script type="text/javascript" src="http://pb.io/media/js/master.js"></script>
     <link rel="icon" href="{{ MEDIA_URL }}favicon.ico" type="image/vnd.microsoft.icon">
-    <link rel="shortcut icon" href="{{ MEDIA_URL }}favicon.ico" type="image/vnd.microsoft.icon">
+    <link rel="shortcut icon" href="http://pb.io/media/favicon.ico" type="image/vnd.microsoft.icon">
 </head>
 
 <body>
     {% block body %}
-    <div id="wrapper">
-        <div id="content">{% block content %}{% endblock %}</div>
-        <div id="sidebar">{% block sidebar %}{% endblock %}</div>
-    </div>
+        <div id="wrapper">
+            <div id="main">
+                {% block content %}{% endblock %}
+            </div>
+        </div>
     {% endblock %}
 </body>
 
