--- a/media/src/screen.scss
+++ b/media/src/screen.scss
@@ -125,3 +125,12 @@ h1 {
     margin: 1em 0;
     font-size: 80%;
 }
+
+#disqus_thread {
+    width: 800px;
+    margin: 64px auto;
+}
+
+#copy-container {
+    position: relative;
+}
