--- a/media/css/screen.css
+++ b/media/css/screen.css
@@ -185,3 +185,14 @@ h1 {
   margin: 1em 0;
   font-size: 80%;
 }
+
+/* line 129, ../src/screen.scss */
+#disqus_thread {
+  width: 800px;
+  margin: 64px auto;
+}
+
+/* line 134, ../src/screen.scss */
+#copy-container {
+  position: relative;
+}
