--- a/media/css/screen.css
+++ b/media/css/screen.css
@@ -68,7 +68,6 @@ h1 {
 .links {
   background: #000;
   background: rgba(0, 0, 0, 0.6);
-  width: 200px;
   height: 60px;
   -moz-border-radius: 10px;
   -webkit-border-radius: 10px;
@@ -96,14 +95,25 @@ h1 {
   position: absolute;
   bottom: 50px;
   left: 50%;
-  margin-left: -110px;
+  width: 130px;
+  margin-left: -75px;
 }
 /* line 59, ../src/screen.scss */
+.links.zoomable {
+  width: 200px;
+  margin-left: -110px;
+}
+/* line 64, ../src/screen.scss */
 .links.admin {
+  width: 270px;
+  margin-left: -145px;
+}
+/* line 69, ../src/screen.scss */
+.links.admin.zoomable {
   width: 340px;
   margin-left: -180px;
 }
-/* line 64, ../src/screen.scss */
+/* line 74, ../src/screen.scss */
 .links a {
   display: block;
   width: 60px;
@@ -124,45 +134,45 @@ h1 {
   -o-transition-duration: 0.5s;
   transition-duration: 0.5s;
 }
-/* line 75, ../src/screen.scss */
+/* line 85, ../src/screen.scss */
 .links a:first-child {
   margin-left: 0;
 }
-/* line 79, ../src/screen.scss */
+/* line 89, ../src/screen.scss */
 .links a:hover, .links a.hover {
   opacity: 0.9;
   -ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=90);
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=90);
 }
-/* line 83, ../src/screen.scss */
+/* line 93, ../src/screen.scss */
 .links a span {
   display: none;
 }
-/* line 88, ../src/screen.scss */
+/* line 98, ../src/screen.scss */
 .links .zoom.in {
   background-image: url("../img/icon-zoom-in.png");
 }
-/* line 91, ../src/screen.scss */
+/* line 101, ../src/screen.scss */
 .links .zoom.out {
   background-image: url("../img/icon-zoom-out.png");
 }
-/* line 94, ../src/screen.scss */
+/* line 104, ../src/screen.scss */
 .links .download {
   background-image: url("../img/icon-download.png");
 }
-/* line 97, ../src/screen.scss */
+/* line 107, ../src/screen.scss */
 .links .copy {
   background-image: url("../img/icon-copy.png");
 }
-/* line 100, ../src/screen.scss */
+/* line 110, ../src/screen.scss */
 .links .edit {
   background-image: url("../img/icon-edit.png");
 }
-/* line 103, ../src/screen.scss */
+/* line 113, ../src/screen.scss */
 .links .delete {
   background-image: url("../img/icon-delete.png");
 }
-/* line 107, ../src/screen.scss */
+/* line 117, ../src/screen.scss */
 .links .title {
   clear: both;
   position: relative;
@@ -173,26 +183,28 @@ h1 {
   text-shadow: rgba(0, 0, 0, 0.5) 1px 1px 2px;
 }
 
-/* line 119, ../src/screen.scss */
+/* line 129, ../src/screen.scss */
 .image:hover .links, .image.hover .links {
   opacity: 1;
   -ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
 }
 
-/* line 124, ../src/screen.scss */
+/* line 134, ../src/screen.scss */
 .creation-date {
   margin: 1em 0;
   font-size: 80%;
 }
 
-/* line 129, ../src/screen.scss */
+/* line 139, ../src/screen.scss */
 #disqus_thread {
   width: 800px;
   margin: 64px auto;
 }
 
-/* line 134, ../src/screen.scss */
+/* line 144, ../src/screen.scss */
 #copy-container {
   position: relative;
+  float: left;
+  margin-left: 10px;
 }
