--- a/media/css/screen.css
+++ b/media/css/screen.css
@@ -46,25 +46,32 @@ h1 {
   box-shadow: rgba(0, 0, 0, 0.3) 0 0 4px 0;
 }
 /* line 29, ../src/screen.scss */
+.image.no-border img {
+  -moz-box-shadow: transparent 1px 1px 5px 0;
+  -webkit-box-shadow: transparent 1px 1px 5px 0;
+  -o-box-shadow: transparent 1px 1px 5px 0;
+  box-shadow: transparent 1px 1px 5px 0;
+}
+/* line 33, ../src/screen.scss */
 .image .scalable-note {
   opacity: 1;
   -ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
 }
-/* line 33, ../src/screen.scss */
+/* line 37, ../src/screen.scss */
 .image.large .scalable-note {
   opacity: 0;
   -ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
 }
 
-/* line 38, ../src/screen.scss */
+/* line 42, ../src/screen.scss */
 .scalable-note {
   font-size: 12px;
   margin: 16px 0;
 }
 
-/* line 43, ../src/screen.scss */
+/* line 47, ../src/screen.scss */
 .links {
   background: #000;
   background: rgba(0, 0, 0, 0.6);
@@ -98,22 +105,22 @@ h1 {
   width: 130px;
   margin-left: -75px;
 }
-/* line 59, ../src/screen.scss */
+/* line 63, ../src/screen.scss */
 .links.zoomable {
   width: 200px;
   margin-left: -110px;
 }
-/* line 64, ../src/screen.scss */
+/* line 68, ../src/screen.scss */
 .links.admin {
   width: 270px;
   margin-left: -145px;
 }
-/* line 69, ../src/screen.scss */
+/* line 73, ../src/screen.scss */
 .links.admin.zoomable {
   width: 340px;
   margin-left: -180px;
 }
-/* line 74, ../src/screen.scss */
+/* line 78, ../src/screen.scss */
 .links a {
   display: block;
   width: 60px;
@@ -134,45 +141,45 @@ h1 {
   -o-transition-duration: 0.5s;
   transition-duration: 0.5s;
 }
-/* line 85, ../src/screen.scss */
+/* line 89, ../src/screen.scss */
 .links a:first-child {
   margin-left: 0;
 }
-/* line 89, ../src/screen.scss */
+/* line 93, ../src/screen.scss */
 .links a:hover, .links a.hover {
   opacity: 0.9;
   -ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=90);
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=90);
 }
-/* line 93, ../src/screen.scss */
+/* line 97, ../src/screen.scss */
 .links a span {
   display: none;
 }
-/* line 98, ../src/screen.scss */
+/* line 102, ../src/screen.scss */
 .links .zoom.in {
   background-image: url("../img/icon-zoom-in.png");
 }
-/* line 101, ../src/screen.scss */
+/* line 105, ../src/screen.scss */
 .links .zoom.out {
   background-image: url("../img/icon-zoom-out.png");
 }
-/* line 104, ../src/screen.scss */
+/* line 108, ../src/screen.scss */
 .links .download {
   background-image: url("../img/icon-download.png");
 }
-/* line 107, ../src/screen.scss */
+/* line 111, ../src/screen.scss */
 .links .copy {
   background-image: url("../img/icon-copy.png");
 }
-/* line 110, ../src/screen.scss */
+/* line 114, ../src/screen.scss */
 .links .edit {
   background-image: url("../img/icon-edit.png");
 }
-/* line 113, ../src/screen.scss */
+/* line 117, ../src/screen.scss */
 .links .delete {
   background-image: url("../img/icon-delete.png");
 }
-/* line 117, ../src/screen.scss */
+/* line 121, ../src/screen.scss */
 .links .title {
   clear: both;
   position: relative;
@@ -183,26 +190,33 @@ h1 {
   text-shadow: rgba(0, 0, 0, 0.5) 1px 1px 2px;
 }
 
-/* line 129, ../src/screen.scss */
+/* line 133, ../src/screen.scss */
 .image:hover .links, .image.hover .links {
   opacity: 1;
   -ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
 }
 
-/* line 134, ../src/screen.scss */
+/* line 138, ../src/screen.scss */
 .creation-date {
   margin: 1em 0;
   font-size: 80%;
 }
 
-/* line 139, ../src/screen.scss */
+/* line 143, ../src/screen.scss */
+.text {
+  width: 800px;
+  margin: 32px auto;
+  text-align: left;
+}
+
+/* line 149, ../src/screen.scss */
 #disqus_thread {
   width: 800px;
   margin: 64px auto;
 }
 
-/* line 144, ../src/screen.scss */
+/* line 154, ../src/screen.scss */
 #copy-container {
   position: relative;
   float: left;
