--- a/media/src/screen.scss
+++ b/media/src/screen.scss
@@ -26,6 +26,10 @@ h1 {
         @include box-shadow(rgba(0,0,0,0.3), 0, 0, 4px);
     }
     
+    &.no-border img {
+        @include box-shadow(transparent);
+    }
+    
     .scalable-note {
         @include opacity(1);
     }
@@ -134,6 +138,12 @@ h1 {
 .creation-date {
     margin: 1em 0;
     font-size: 80%;
+}
+
+.text {
+    width: 800px;
+    margin: 32px auto;
+    text-align: left;
 }
 
 #disqus_thread {
