Page title now includes image.title. Code block styling issue.

--- a/apps/imagehost/templates/imagehost/image.html
+++ b/apps/imagehost/templates/imagehost/image.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% load thumbnail i18n markup %}
 
+{% block page_title %}{% if image.title %}{{ image.title }} – {% endif %}{{ block.super }}{% endblock %}
+
 {% block content %}
     {% thumbnail image.file 640x640 as small %}
     <style type="text/css">
