--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>{% block site_name %}img.pb.io{% endblock %}</title>
+    <title>{% block page_title %}img.pb.io{% endblock %}</title>
     {% block fonts %}{% endblock %}
     <link rel="stylesheet" href="http://pb.io/media/css/screen.css" media="screen, projection" type="text/css">
     <!--[if IE]><link href="{{ MEDIA_URL }}css/ie.css" media="screen, projection" rel="stylesheet" type="text/css"><![endif]-->
